--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "5.4.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
+    "prisma": "^5.4.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
